Added laserscan tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,9 @@ target_link_libraries(${PROJECT_NAME} ${OpenCL_LIBRARIES} ${catkin_LIBRARIES})
 
 add_executable(pointcloud_test1 tests/src/pointcloud_test1.cpp)
 target_link_libraries(pointcloud_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(laserscan_test1 tests/src/laserscan_test1.cpp)
+target_link_libraries(laserscan_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(laserscan_test2 tests/src/laserscan_test2.cpp)
+target_link_libraries(laserscan_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
