Added support for more types of vectors and fixed some optimization-related bugs. Also added the option to choose between dimensions in the process function with more than one input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,3 +84,21 @@ target_link_libraries(char_char_vectors_test2 ${PROJECT_NAME} ${catkin_LIBRARIES
 
 add_executable(char_char_vectors_test3 tests/src/char_char_vectors_test3.cpp)
 target_link_libraries(char_char_vectors_test3 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_int_vectors_test1 tests/src/char_int_vectors_test1.cpp)
+target_link_libraries(char_int_vectors_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_int_vectors_test2 tests/src/char_int_vectors_test2.cpp)
+target_link_libraries(char_int_vectors_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_int_vectors_test3 tests/src/char_int_vectors_test3.cpp)
+target_link_libraries(char_int_vectors_test3 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_float_vectors_test1 tests/src/char_float_vectors_test1.cpp)
+target_link_libraries(char_float_vectors_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_float_vectors_test2 tests/src/char_float_vectors_test2.cpp)
+target_link_libraries(char_float_vectors_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_float_vectors_test3 tests/src/char_float_vectors_test3.cpp)
+target_link_libraries(char_float_vectors_test3 ${PROJECT_NAME} ${catkin_LIBRARIES})
