Added two test cases to experiment with global work size and buffer size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,3 +219,9 @@ target_link_libraries(double_double_vectors_test2 ${PROJECT_NAME} ${catkin_LIBRA
 
 add_executable(double_double_vectors_test3 tests/src/double_double_vectors_test3.cpp)
 target_link_libraries(double_double_vectors_test3 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(int_vector_buffer_size_test1 tests/src/int_vector_buffer_size_test1.cpp)
+target_link_libraries(int_vector_buffer_size_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(int_vector_buffer_size_test2 tests/src/int_vector_buffer_size_test2.cpp)
+target_link_libraries(int_vector_buffer_size_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
