--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,3 +225,15 @@ target_link_libraries(int_vector_buffer_size_test1 ${PROJECT_NAME} ${catkin_LIBR
 
 add_executable(int_vector_buffer_size_test2 tests/src/int_vector_buffer_size_test2.cpp)
 target_link_libraries(int_vector_buffer_size_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_char_char_vectors_test1 tests/src/char_char_char_vectors_test1.cpp)
+target_link_libraries(char_char_char_vectors_test1 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_char_char_vectors_test2 tests/src/char_char_char_vectors_test2.cpp)
+target_link_libraries(char_char_char_vectors_test2 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_char_char_vectors_test3 tests/src/char_char_char_vectors_test3.cpp)
+target_link_libraries(char_char_char_vectors_test3 ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+add_executable(char_char_char_vectors_test4 tests/src/char_char_char_vectors_test4.cpp)
+target_link_libraries(char_char_char_vectors_test4 ${PROJECT_NAME} ${catkin_LIBRARIES})
